--- a/Lab1/app/static/styles.css
+++ b/Lab1/app/static/styles.css
@@ -5,3 +5,13 @@ body {
 .avatar {
     max-width: 100%;
 }
+
+html, body {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
+}
