changed root_app a little bit

--- a/root_app/templates/index.html
+++ b/root_app/templates/index.html
@@ -2,13 +2,9 @@
 
 {% block content %}
 
-<ul>
-    <li> 
-        <a href="/lab1"> Лабораторная работа №1 </a> 
-    </li>
-    <li> 
-        <a href="/lab2"> Лабораторная работа №2 </a> 
-    </li>
-</ul>
+<ol>
+    <li><a href="/lab1">Лабораторная работа № 1</a></li>
+    <li><a href="/lab2">Лабораторная работа № 2</a></li>
+</ol>
 
 {% endblock %}
