--- a/root_app/templates/base.html
+++ b/root_app/templates/base.html
@@ -21,10 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-              <a class="navbar-brand" href="{{ url_for('index') }}">Лабораторные работы</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+              <a class="navbar-brand" href="{{ url_for('index') }}">Лабораторные работы по "Разработке веб-приложений". Ткач Владимир Витальевич ст. гр. 231-329</a>
             </div>
           </nav>
     </header>
