--- a/root_app/templates/base.html
+++ b/root_app/templates/base.html
@@ -13,7 +13,7 @@
         {% if title %}
           {{ title }}
         {% else %}
-          Лабораторная работа №2
+          Лабораторные работы
         {% endif %}
     </title>
   </head>
