--- a/Lab5/app/templates/users/index.html
+++ b/Lab5/app/templates/users/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+    <h1> {{ g.has_permission }} </h1>
     <table class="table">
         <thead>
             <tr>
