--- a/Lab5/app/templates/users/index.html
+++ b/Lab5/app/templates/users/index.html
@@ -34,7 +34,7 @@
                 {% endif %}
                 {% if current_user.is_authenticated and is_admin %}
                     <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal" 
-                        data-user-id="{{ user.id }}"> Delete </button>
+                        data-user-id="{{ user.id }}" data-delete-url="{{ url_for('users.delete', user_id=user.id) }}"> Delete </button>
                 {% endif %}    
                 </td>
             </tr>
