--- a/Lab5/app/templates/base.html
+++ b/Lab5/app/templates/base.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" aria-current="page" href="{{ url_for('users.changepassword', user_id=current_user.id) }}"> Сменить пароль </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="{{ url_for('visit_logs.visits') }}"> Статистика </a>
+                      <a class="nav-link" aria-current="page" href="{{ url_for('visit_logs.visit_logs') }}"> Статистика </a>
                     </li>
                   {% endif %}
                 </ul>
