--- a/Lab5/app/templates/visit_logs/visits.html
+++ b/Lab5/app/templates/visit_logs/visits.html
@@ -26,4 +26,14 @@
         <a href="{{ url_for('visit_logs.by_users') }}" class="btn btn-secondary">Отчет по пользователям</a>
     </div>
 
+    <nav>
+        <ul class="pagination">
+            {% for p in range(1, total_pages + 1) %}
+                <li class="page-item {% if p == current_page %}active{% endif %}">
+                    <a class="page-link" href="{{ url_for('visit_logs.visits', page=p) }}">{{ p }}</a>
+                </li>
+            {% endfor %}
+        </ul>
+    </nav>
+
 {% endblock %}
