--- a/Lab5/app/templates/visit_logs/by_users.html
+++ b/Lab5/app/templates/visit_logs/by_users.html
@@ -19,4 +19,9 @@
             {% endfor %}
         </tbody>
     </table>
+
+    <div class="mt-3">
+        <a href="{{ url_for('visit_logs.export_users_csv') }}" class="btn btn-primary mt-3">Экспорт в CSV</a>
+    </div>
+
 {% endblock %}
