--- a/Lab5/app/templates/visit_logs/visits.html
+++ b/Lab5/app/templates/visit_logs/visits.html
@@ -26,14 +26,16 @@
         <a href="{{ url_for('visit_logs.by_users') }}" class="btn btn-secondary">Отчет по пользователям</a>
     </div>
 
-    <nav>
-        <ul class="pagination">
-            {% for p in range(1, total_pages + 1) %}
-                <li class="page-item {% if p == current_page %}active{% endif %}">
-                    <a class="page-link" href="{{ url_for('visit_logs.visits', page=p) }}">{{ p }}</a>
-                </li>
-            {% endfor %}
-        </ul>
-    </nav>
+    <div class="mt-3">
+        <nav>
+            <ul class="pagination">
+                {% for p in range(1, total_pages + 1) %}
+                    <li class="page-item {% if p == current_page %}active{% endif %}">
+                        <a class="page-link" href="{{ url_for('visit_logs.visits', page=p) }}">{{ p }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </nav>
+    </div>
 
 {% endblock %}
