--- a/DietApp/app/templates/base.html
+++ b/DietApp/app/templates/base.html
@@ -39,12 +39,15 @@
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="{{ url_for('products.product', user_id=current_user.id) }}"> Продукты </a>
                     </li>
+                    {#
                     <li class="nav-item">
                       <a class="nav-link" aria-current="page" href="{{ url_for('meals.index', user_id=current_user.id) }}"> Приемы пищи </a>
-                  </li>
-                    <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="{{ url_for('visit_logs.visits') }}"> Статистика </a>
                     </li>
+                     
+                    <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="{{ url_for('pages.report') }}"> Создать отчет </a>
+                    </li>
+                    #}
                   {% endif %}
                 </ul>
               </div>
