--- a/root_app/templates/index.html
+++ b/root_app/templates/index.html
@@ -8,6 +8,7 @@
     <li><a href="/lab3">Лабораторная работа № 3</a></li>
     <li><a href="/lab4">Лабораторная работа № 4</a></li>
     <li><a href="/lab5">Лабораторная работа № 5</a></li>
+    <li><a href="/DietApp">Курсовой проект</a></li>
 </ol>
 
 {% endblock %}
