--- a/DietApp/app/templates/base.html
+++ b/DietApp/app/templates/base.html
@@ -37,7 +37,7 @@
                         <a class="nav-link" aria-current="page" href="{{ url_for('pages.bmr_calculator') }}"> Калькулятор БМО </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{{ url_for('products.product', user_id=current_user.id) }}"> Продукты </a>
+                        <a class="nav-link" aria-current="page" href="{{ url_for('product.products', user_id=current_user.id) }}"> Продукты </a>
                     </li>
                     {#
                     <li class="nav-item">
