--- a/DietApp/app/templates/product/products.html
+++ b/DietApp/app/templates/product/products.html
@@ -43,8 +43,8 @@
             </div>
 
             <div class="d-flex justify-content-between mt-4">
-                <button class="btn btn-secondary" id="load-more">Загрузить ещё</button>
-                <a href="{{ url_for('add_product') }}" class="btn btn-success">Добавить продукт</a>
+                {# <button class="btn btn-secondary" id="load-more">Загрузить ещё</button> #}
+                <a href="{{ url_for('product.new') }}" class="btn btn-success">Добавить продукт</a>
             </div>
         </div>
     </div>
@@ -52,5 +52,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="{{ url_for('static', filename='js/products.js') }}"></script>
+{# <script src="{{ url_for('static', filename='js/products.js') }}"></script> #}
 {% endblock %}
