--- a/DietApp/app/templates/product/new.html
+++ b/DietApp/app/templates/product/new.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% from 'products/form.html' import product_form %}
+{% from 'product/form.html' import product_form %}
 
 {% block content %}
     <h2 class="text-center mb-4">Создание нового продукта</h2>
