--- a/DietApp/app/templates/pages/bmr_calculator.html
+++ b/DietApp/app/templates/pages/bmr_calculator.html
@@ -18,11 +18,11 @@
         <div class="mb-3">
             <label class="form-label">Пол</label><br>
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="gender" id="male" value="male"  {% if form_data.gender == 'male' %}checked{% endif %} required>
+                <input class="form-check-input" type="radio" name="gender" id="male" value="male"  {% if user_data.gender == 'male' %}checked{% endif %} required>
                 <label class="form-check-label" for="male">Мужской</label>
             </div>
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="gender" id="female" value="female"  {% if form_data.gender == 'female' %}checked{% endif %}>
+                <input class="form-check-input" type="radio" name="gender" id="female" value="female"  {% if user_data.gender == 'female' %}checked{% endif %}>
                 <label class="form-check-label" for="female">Женский</label>
             </div>
         </div>
