--- a/DietApp/app/templates/product/products.html
+++ b/DietApp/app/templates/product/products.html
@@ -8,23 +8,23 @@
             <form method="get" id="filters-form">
                 <div class="mb-3">
                     <label for="name" class="form-label">Название</label>
-                    <input type="text" class="form-control" id="name" name="name">
+                    <input type="text" class="form-control" id="name" name="name" value="{{ filters.name }}">
                 </div>
                 {% for field in ['calories', 'protein', 'fat', 'carbs'] %}
                 <div class="mb-3">
                     <label class="form-label">{{ field|capitalize }} от / до</label>
                     <div class="d-flex">
-                        <input type="number" name="{{ field }}_min" class="form-control me-1" placeholder="от">
-                        <input type="number" name="{{ field }}_max" class="form-control" placeholder="до">
+                        <input type="number" name="{{ field }}_min" class="form-control me-1" placeholder="от" value="{{ filters[field + '_min'] }}">
+                        <input type="number" name="{{ field }}_max" class="form-control" placeholder="до" value="{{ filters[field + '_max'] }}>
                     </div>
                 </div>
                 {% endfor %}
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" name="mine" id="mine">
+                    <input class="form-check-input" type="checkbox" name="mine" id="mine" {% if filters.mine %}checked{% endif %}>
                     <label class="form-check-label" for="mine">Мои продукты</label>
                 </div>
                 <div class="form-check mb-3">
-                    <input class="form-check-input" type="checkbox" name="shared" id="shared" checked>
+                    <input class="form-check-input" type="checkbox" name="shared" id="shared" {% if filters.shared %}checked{% endif %}>>
                     <label class="form-check-label" for="shared">Общие продукты</label>
                 </div>
                 <button type="submit" class="btn btn-primary">Применить фильтры</button>
